<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.B2C</groupId>
  <artifactId>Lloyds</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Lloyds</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
  
      	<!-- Source directory configuration -->
		<sourceDirectory>src</sourceDirectory>
		
		<plugins>
		   <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
				<version>3.6.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
					<!-- Suite testng xml file to consider for test execution -->
					<testFailureIgnore>true</testFailureIgnore>
					<suiteXmlFiles>
						<suiteXmlFile>${testng}.xml</suiteXmlFile>
					</suiteXmlFiles>
					<systemPropertyVariables>
					    <instance>${TestEnvironment}</instance>
						<browser>${browser}</browser>
						<testbed>${testbed}</testbed>
						<device>${device}</device>							
					</systemPropertyVariables>
				</configuration>
			</plugin>
		
		</plugins>
  
  </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
      <dependency>
		    <groupId>org.testng</groupId>
		    <artifactId>testng</artifactId>
		    <version>6.9.10</version>
	</dependency>
    
	    <dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>4.0.1</version>
	   </dependency>
 
	   <dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>4.0.1</version>
	   </dependency>
   
        <dependency>
              <groupId>org.seleniumhq.selenium</groupId>
               <artifactId>selenium-java</artifactId>
              <version>3.141.59</version>
        </dependency>
        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
             <version>3.141.59</version>
        </dependency>
		 <dependency>
		  <groupId>org.seleniumhq.selenium</groupId>
		  <artifactId>selenium-api</artifactId>
		  <version>3.141.59</version>
		</dependency>
        <dependency>
		  <groupId>org.seleniumhq.selenium</groupId>
		  <artifactId>selenium-remote-driver</artifactId>
		  <version>3.141.59</version>
		</dependency>
          <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>6.1.0</version>
        </dependency>
     	<dependency>
			<groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>3.1.5</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-edge-driver</artifactId>
		    <version>3.6.0</version>
      </dependency>
	  <dependency>
		    <groupId>org.sikuli</groupId>
		    <artifactId>sikuli-api</artifactId>
		    <version>1.2.0</version>
		</dependency>
		<dependency>
		    <groupId>com.sikulix</groupId>
		    <artifactId>sikulixapi</artifactId>
		    <version>1.1.0</version>
		</dependency> 
		  <dependency>
    <groupId>net.sourceforge.tess4j</groupId>
    <artifactId>tess4j</artifactId>
    <version>4.0.0</version>
</dependency>    
  </dependencies>
</project>
